	returns top level chapter numbers.
	(handle_enum_increment): always do the incrementation. but return
	strings conditionally.

	* makeinfo/xml.c: changed screen element's contained_in_para to 0 for
	Docbook. @lisp/@smalllisp create programlisting.
	(xml_insert_quotation): reimplemented quotation_stack handling.

2003-11-22  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Conventions): finally, get rid of @vskip
	-@baselineskip kludge, we handle index entries after @item's now.

2003-11-22  Stepan Kasal  <kasal@ucw.cz>

	* doc/texinfo.txi: use new @quotation feature.

	* texinfo.tex (\putwordDeftypevar, \putwordDeftypefun): Remove.
	* txi-cs.tex, txi-de.tex, txi-en.tex, txi-es.tex, txi-fr.tex,
	  txi-it.tex. txi-nl.tex, txi-no.tex, txi-pl.tex, txi-pt.tex,
	  txi-tr.tex: The same. 
	[texinfo-20031120-deftype-del.patch]

	* doc/texinfo.tex (\doverbatiminclude): just call \setupverbatim.
	(\setupverbatiminclude): remove.
	[texinfo-20031121-verbatim2.patch]
	
	* doc/texinfo.tex (\math): no need for \mathcode, and we actually
		can use $ not \implicitmath.
	[texinfo-20031121-math.patch]

	* doc/texinfo.tex (\zeroskipmacro): new macro, so we can
	check for true zero skip.
	(\dosubindsanitize): use it.
	[texinfo-20031120-zeroskip.patch]
	
	* doc/texinfo.tex (\doignore): scan in verbatim mode, so that
	@ can be ignored in @ignore text (as $@ occurs in make.texi).
	(\dodoignore): use \_STOP_ instead of \ST@P.
	[texinfo-20031120-zeroskip.patch]
	
	* doc/texinfo.tex (\defparsearg): new macro, to simplify places
	where the user macro just calls \parsearg.  Use it in many places.
	[texinfo-20031121-defparsearg.patch]
	
	* doc/texinfo.tex (\begin): remove, this is undocumented
	and unused.
	[texinfo-20031121-begin.patch]
	
	* doc/texinfo.tex (\author,\subtitle,\author): move to outer
	level (was inside \titlepage), for new \parsearg's sake.
	[texinfo-20031116-titlepage1.patch]
	
	* doc/texinfo.tex (\evenheadingxxx,\oddfootingyyy): might as well